--- a/package.json
+++ b/package.json
@@ -1,21 +1,13 @@
 {
-  "name": "elementor-developers-docs",
+  "name": "fact-check-backend",
   "version": "1.0.0",
-  "description": "Resources and tutorials for Elementor developers",
-  "main": "index.js",
-  "base": "/docs/",
-  "authors": {
-    "name": "Rami Yushuvaev",
-    "email": "ramiy@elementor.com"
-  },
+  "type": "module",
+  "main": "server.mjs",
   "scripts": {
-    "dev": "vuepress dev src",
-    "build": "vuepress build src"
+    "start": "node server.mjs"
   },
-  "devDependencies": {
-    "@vuepress/plugin-pwa": "^1.9.7",
-    "vuepress": "^1.9.7",
-    "vuepress-plugin-clean-urls": "^1.1.2",
-    "vuepress-plugin-seo": "^0.2.0"
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.21.0"
   }
 }
